grammar.js
    source_file: $ => repeat($._declaration),

    // ---------------------------------------------------------------
    // Declarations
    // ---------------------------------------------------------------

    // Visibility annotation: `pub` or `pub(bind)`.
    // `bind` is a contextual keyword parsed only inside the parens after `pub`.
    _declaration: $ => choice(
      $.multi_decl,
      $.param_declaration,
      $.node_declaration,
      $.dimension_declaration,
      $.unit_declaration,
      $.type_declaration,

      $.index_declaration,
      $.plugin_import_declaration,
      $.import_declaration,
      $.include_declaration,
      $.dag_declaration,
      $.assert_declaration,
      $.plot_declaration,
      $.figure_declaration,
      $.layer_declaration,
    ),

    // #[name] or #[name(arg1, arg2)] or #[name(Index#Variant, (A#X, B#Y))]
    param_declaration: $ => seq(
      repeat($.attribute),
      optional($.visibility),
      "param",
      field("name", $.identifier),
      optional(seq(":", field("type", $.type_expr))),
      optional(seq("=", field("value", $._expr))),
      ";",
    ),

    // node v_exhaust: Velocity = @isp * @g0;
    // const node g0: Acceleration = 9.80665 m/s^2;
    node_declaration: $ => seq(
      repeat($.attribute),
      optional($.visibility),
      choice(
        seq(
          optional("const"), "node", field("name", $.identifier),
          optional(seq(":", field("type", $.type_expr))),
          "=", field("value", $._expr),
        ),
        seq(
          "node", field("name", $.identifier),
          ":", field("type", $.type_expr),
          "=", field("value", $.todo_definition),
        ),
      ),
      ";",
    ),

    // A whole-node definition, not an expression or an ordinary call.
    multi_decl: $ => seq(
      field("slot", $.multi_decl_slot),
      ",",
      field("slot", $.multi_decl_slot),
      repeat(seq(",", field("slot", $.multi_decl_slot))),
      "=",
      field("init", $.multi_table_expr),
      ";",
    ),

    multi_decl_slot: $ => seq(
      optional(field("visibility", $.visibility)),
      field("kind", $.multi_decl_kind),
      field("name", $.identifier),
      ":",
      field("type", $.type_expr),
    ),

    multi_decl_kind: $ => choice(
      "param",
      "node",
      seq("const", "node"),
    ),

    multi_table_expr: $ => seq(
      "table",
      "[",
      field("shared_axis", choice($.ident_path, $.finite_table_index)),
      repeat(seq(",", field("shared_axis", choice($.ident_path, $.finite_table_index)))),
      ",",
      field("slot_tuple", $.slot_tuple),
      "]",
      "{",
      $.multi_table_body,
      "}",
    ),

    slot_tuple: $ => seq(
      "(",
      field("entry", $.slot_axis_entry),
      repeat(seq(",", field("entry", $.slot_axis_entry))),
      optional(","),
      ")",
    ),

    slot_axis_entry: $ => choice("_", $.ident_path),

    multi_table_body: $ => choice(
      repeat1($.multi_slice_section),
      $.multi_single,
    ),

    multi_single: $ => seq(
      $.multi_header_row,
      repeat1($.multi_data_row),
    ),

    multi_header_row: $ => seq(
      ":",
      field("cell", $.multi_header_cell),
      repeat(seq(",", field("cell", $.multi_header_cell))),
      ";",
    ),

    multi_header_cell: $ => choice(
      "_",
      $.identifier,
    ),

    multi_data_row: $ => seq(
      optional(seq(field("row_label", $.identifier), ":")),
      field("value", $._expr),
      repeat(seq(",", field("value", $._expr))),
      ";",
    ),

    // base dim Length;
    // dim D;                            -- required dim (bound via include)
    // dim Velocity = Length / Time;
    unit_declaration: $ => choice(
      seq(
        optional($.visibility),
        "base",
        "unit",
        field("name", $.identifier),
        ":",
        field("dimension", $.dim_expr),
        ";",
      ),
      seq(
        optional($.visibility),
        optional("const"),
        "unit",
        field("name", $.identifier),
        ":",
        field("dimension", $.dim_expr),
        "=",
        field("definition", $.unit_def),
        ";",
      ),
    ),

    // Every `type T { … }` is an n-variant tagged union. Record-
    // shaped types are written as a single-variant union whose sole
    // constructor's name matches the type's name:
    //   type Position { Position(x: Length, y: Length) }
    // A unit marker:
    //   type Eci { Eci }
    // A required type stub:
    //   type Element;
    // A multi-variant union:
    //   type Maneuver {
    //     Impulsive(delta_v: Velocity),
    //     LowThrust(thrust: Force, duration: Time),
    //     Coast,
    //   }
    type_declaration: $ => seq(
      repeat($.attribute),
      optional($.visibility),
      "type",
      field("name", $.identifier),
      optional(field("generics", $.generic_params)),
      choice(
        seq("{", $.constructor_list, "}"),
        ";",
      ),
    ),

    field_declaration: $ => seq(
      field("name", $.identifier),
      ":",
      field("type", $.type_expr),
    ),

    constructor_list: $ => seq(
      $.constructor_declaration,
      repeat(seq(",", $.constructor_declaration)),
      optional(","),
    ),

    // A constructor is either a bare unit constructor or uses the one
    // canonical parenthesized payload form.
    constructor_declaration: $ => seq(
      field("name", $.identifier),
      optional(seq(
        "(",
        optional(seq(
          $.field_declaration,
          repeat(seq(",", $.field_declaration)),
          optional(","),
        )),
        ")",
      )),
    ),

    // index Maneuver = { Departure, Correction, Insertion };
    // index TimeStep = range(0.0 s, 1.0 s, step: 0.1 s);
    // index Samples = linspace(0.0 s, 1.0 s, points: 11);
    // index Foo;  (required named)
    // index Foo: Time;  (required coordinate)
    index_declaration: $ => choice(
      // Named index: index Maneuver = { Departure, Correction, Insertion };
      seq(
        optional($.visibility),
        "index",
        field("name", $.identifier),
        "=",
        "{",
        $.variant,
        repeat(seq(",", $.variant)),
        optional(","),
        "}",
        ";",
      ),
      // Exact-step coordinate index.
      seq(
        optional($.visibility),
        "index",
        field("name", $.identifier),
        "=",
        alias($._range_keyword, "range"),
        "(",
        field("start", $._expr),
        ",",
        field("end", $._expr),
        ",",
        alias($._step_keyword, "step"),
        ":",
        field("step", $._expr),
        ")",
        ";",
      ),
      // Exact-count coordinate index.
      seq(
        optional($.visibility),
        "index",
        field("name", $.identifier),
        "=",
        alias($._linspace_keyword, "linspace"),
        "(",
        field("start", $._expr),
        ",",
        field("end", $._expr),
        ",",
        alias($._points_keyword, "points"),
        ":",
        field("points", $._nat_expr),
        ")",
        ";",
      ),
      // Required named: index Foo;
      seq(optional($.visibility), "index", field("name", $.identifier), ";"),
      // Required coordinate: index Foo: Time;
      seq(
        optional($.visibility),
        "index",
        field("name", $.identifier),
        ":",
        field("dimension", $.dim_expr),
        ";",
      ),
    ),

    variant: $ => $.identifier,


    generic_params: $ => seq(
      "<",
      $.generic_param,
      repeat(seq(",", $.generic_param)),
      optional(","),
      ">",
    ),

    generic_param: $ => seq(
      field("name", $.identifier),
      ":",
      field("constraint", $.generic_constraint),
      optional(seq("=", field("default", $.generic_arg))),
    ),

    generic_constraint: $ => choice("Dim", "Index", "Nat", "Type"),


    // import nasa.rocket;                                 -- bare module import
    // import nasa.rocket as r;                            -- module import with alias
    // import nasa.rocket::{ type Orbit, compute_thrust as ct }; -- brace-list selector
    //
    // Whole-DAG imports may be `pub`; selective re-exports mark individual
    // items `pub` in the brace list. The brace-list and `as` forms
    // are mutually exclusive. All paths are dot-separated and absolute from
    // the package root; no file-path strings, no `..`, no `/`.
    ident_path: $ => prec(PREC.CALL, choice(
      $.identifier,
      seq(
        field("namespace", $.namespace_path),
        "::",
        field("member", $.identifier),
      ),
    )),

    // Import item with an explicit marker for every non-term namespace.
    // Bare items select terms (declarations and constructors).
    assert_declaration: $ => seq(
      repeat($.attribute),
      optional($.visibility),
      "assert",
      field("name", $.identifier),
      "=",
      field("body", $.assert_body),
      ";",
    ),

    // plot mass_vs_dv = {
    //     mark: point,
    //     encode: {
    //         x: for m: Maneuver { @delta_v[m] },
    //         y: for m: Maneuver { @spacecraft_mass[m] },
    //     },
    //     title: "Spacecraft Mass vs Delta-V",
    // };
    plot_declaration: $ => seq(
      repeat($.attribute),
      optional($.visibility),
      "plot",
      field("name", $.identifier),
      "=",
      "{",
      optional(seq(
        $._plot_body_field,
        repeat(seq(",", $._plot_body_field)),
        optional(","),
      )),
      "}",
      ";",
    ),

    _plot_body_field: $ => choice(
      $.mark_field,
      $.encode_field,
      $.plot_field,
    ),

    // mark: point, or mark: line { stroke_width: 2.0, },
    mark_field: $ => seq(
      "mark",
      ":",
      field("mark_type", $.mark_type),
      optional(seq(
        "{",
        optional(seq(
          $.plot_field,
          repeat(seq(",", $.plot_field)),
          optional(","),
        )),
        "}",
      )),
    ),

    mark_type: $ => choice("point", "line", "bar", "area", "rect", "tick"),

    // encode: { x: expr, y: expr, color: expr, ... },
    plot_field: $ => seq(
      field("name", $.identifier),
      ":",
      field("value", $._expr),
    ),

    // figure comparison = {
    //     plots: [curve_a, curve_b],
    //     title: "Side-by-side Comparison",
    // };
    assert_body: $ => choice(
      $.tolerance_assert,
      $._expr,
    ),

    // All three operands are full expressions. Tolerance is always absolute;
    // `%` is only the ordinary binary modulo operator inside an expression.
    tolerance_assert: $ => seq(
      field("actual", $._expr),
      "~=",
      field("expected", $._expr),
      "+/-",
      field("tolerance", $._expr),
    ),

    // ---------------------------------------------------------------
    // Type expressions
    // ---------------------------------------------------------------

    type_expr: $ => choice(
      $.indexed_type,
      $.constrained_type,
      $._type_expr_base,
    ),

    _type_expr_base: $ => choice(
      $.dimensionless,
      $.bool_type,
      $.int_type,
      $.datetime_type,
      $.complex_type,
      $.key_type,
      $.type_application,
      $.qualified_variant,
      $.dim_expr,
    ),

    // Constrained type: Mass(min: 100 kg, max: 2000 kg)
    type_application: $ => prec.dynamic(2, seq(
      field("name", $.ident_path),
      "<",
      field("generic_arg", $.generic_arg),
      repeat(seq(",", field("generic_arg", $.generic_arg))),
      optional(","),
      ">",
    )),

    dimensionless: $ => "Dimensionless",
    bool_type: $ => "Bool",
    int_type: $ => "Int",
    // Bare `Datetime` (= Datetime<UTC>) or the built-in parameterized
    // form `Datetime<TT>`. The reference parser keeps this separate from
    // `type_application` (whose head is an `ident_path`, not a keyword).
    datetime_type: $ => seq(
      "Datetime",
      optional(seq(
        "<",
        field("type_arg", $.type_expr),
        repeat(seq(",", field("type_arg", $.type_expr))),
        optional(","),
        ">",
      )),
    ),

    // Built-in dimension-aware complex quantity: Complex<Length>, Complex<D / Time>.
    indexed_type: $ => seq(
      field("base", choice($.constrained_type, $._type_expr_base)),
      "[",
      $._index_expr,
      repeat(seq(",", $._index_expr)),
      optional(","),
      "]",
    ),

    // Nat values are never implicitly lifted into Index positions.
    _index_expr: $ => choice(
      $.finite_index,
      $.ident_path,
    ),

    _nat_expr: $ => choice(
      $.nat_add_expr,
      $.nat_mul_expr,
      $.identifier,
      $.nat_literal,
    ),

    // Nat addition expression in index position: N + 1, M + N + 2, M * N + 1
    nat_add_expr: $ => prec.left(PREC.NAT_ADD, seq(
      field("left", choice($.identifier, $.nat_literal, $.nat_add_expr, $.nat_mul_expr)),
      "+",
      field("right", choice($.identifier, $.nat_literal, $.nat_mul_expr)),
    )),

    // Nat multiplication expression in index position: M * N, M * N * P, 2 * N
    nat_mul_expr: $ => prec.left(PREC.NAT_MUL, seq(
      field("left", choice($.identifier, $.nat_literal, $.nat_mul_expr)),
      "*",
      field("right", choice($.identifier, $.nat_literal)),
    )),

    // Integer literal in a type-level Nat expression.
    nat_literal: $ => /[0-9][0-9_]*/,

    // ---------------------------------------------------------------
    // Dimension expressions: Length, Length^2, Mass * Length / Time^2
    // ---------------------------------------------------------------

    dim_expr: $ => prec.right(PREC.MUL + 1, seq(
      $.dim_term,
      repeat(seq(choice("*", "/"), $.dim_term)),
    )),

    // `Dimensionless` is the identity dimension, so it may be a term of a
    // compound dimension expression (`Dimensionless / Time`). A bare
    // `Dimensionless` type stays the `dimensionless` type node.
    dim_term: $ => prec.right(PREC.POWER + 1, choice(
      seq($.ident_path, optional(seq("^", $.exponent))),
      prec(-1, seq($.dimensionless, optional(seq("^", $.exponent)))),
      seq("(", $.dim_expr, ")", optional(seq("^", $.exponent))),
    )),

    // Exponent on a dim/unit term: an integer (`^2`, `^-1`) or a
    // parenthesized rational (`^(1/2)`, `^(-1/2)`), per grammar.ebnf
    // `exponent`. Shared by dimension and unit expressions.
    unit_expr: $ => seq(
      optional(seq("1", "/")),
      $.unit_term,
      repeat(prec.dynamic(1, seq(choice("*", "/"), $.unit_term))),
    ),

    // A unit reference is a local/prelude name or a member selected through
    // the same explicit `::` boundary used by every imported category.
    unit_term: $ => prec.right(PREC.POWER + 1, choice(
      seq(
        field("name", $.ident_path),
        optional(seq("^", $.exponent)),
      ),
      seq("(", $.unit_expr, ")", optional(seq("^", $.exponent))),
    )),

    // Unit definition in unit declaration: 1000 m, 1 kg * m / s^2
    // Also supports dynamic scale: (@rate) USD
    unit_def: $ => seq(
      field("scale", choice($.number, $.parenthesized_expr)),
      $.unit_expr,
    ),

    // ---------------------------------------------------------------
    // Expressions
    // ---------------------------------------------------------------

    _expr: $ => choice(
      $.binary_expr,
      $.unary_expr,
      $.convert_expr,
      $.if_expr,
      $.match_expr,
      $.for_expr,
      $.scan_expr,
      $.unfold_expr,
      $.key_form_expr,
      $.table_expr,
      $._postfix_expr,
    ),

    // Conversion: expr -> unit_expr, or timezone display conversion:
    // expr -> "Asia/Tokyo" (a string literal target selects the
    // timezone-display form, matching the reference parser).
    convert_expr: $ => prec.left(PREC.CONVERT, seq(
      field("value", $._expr),
      "->",
      field("target", choice($.unit_expr, $.string_literal)),
    )),

    number: $ => /[0-9][0-9_]*(\.[0-9][0-9_]*)?([eE][+-]?[0-9]+)?/,

    identifier: $ => choice($._identifier, "todo"),
