test/corpus/rejected_keyed_syntax.txt
================================================================================
Brace constructor payloads are rejected
================================================================================

type Result {
  Err { code: Int },
}

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (identifier)
    (constructor_list
      (constructor_declaration
        (identifier)))
    (ERROR
      (int_type)))
  (ERROR))

================================================================================
Contextual heterogeneous header labels are accepted
================================================================================

param scalar: Dimensionless[Row],
param enabled: Bool[Row, Mode]
  = table[Row, (_, Mode)] {
      : _, Safe;
      A: 1.0, true;
  };

--------------------------------------------------------------------------------

(source_file
  (multi_decl
    (multi_decl_slot
      (multi_decl_kind)
      (identifier)
      (type_expr
        (indexed_type
          (dimensionless)
          (ident_path
            (identifier)))))
    (multi_decl_slot
      (multi_decl_kind)
      (identifier)
      (type_expr
        (indexed_type
          (bool_type)
          (ident_path
            (identifier))
          (ident_path
            (identifier)))))
    (multi_table_expr
      (ident_path
        (identifier))
      (slot_tuple
        (slot_axis_entry)
        (slot_axis_entry
          (ident_path
            (identifier))))
      (multi_table_body
        (multi_single
          (multi_header_row
            (multi_header_cell)
            (multi_header_cell
              (identifier)))
          (multi_data_row
            (identifier)
            (number)
            (boolean)))))))
