test/corpus/tolerance_assertions.txt
================================================================================
Full-expression absolute tolerance
================================================================================

assert close = @actual ~= @expected +/- abs(@expected) * 0.05;

--------------------------------------------------------------------------------

(source_file
  (assert_declaration
    (identifier)
    (assert_body
      (tolerance_assert
        (graph_ref
          (ident_path
            (identifier)))
        (graph_ref
          (ident_path
            (identifier)))
        (binary_expr
          (fn_call
            (ident_path
              (identifier))
            (graph_ref
              (ident_path
                (identifier))))
          (number))))))

================================================================================
Trailing percent is not assertion syntax
================================================================================

assert old = @actual ~= @expected +/- 5 %;

--------------------------------------------------------------------------------

(source_file
  (assert_declaration
    (identifier)
    (assert_body
      (tolerance_assert
        (graph_ref
          (ident_path
            (identifier)))
        (graph_ref
          (ident_path
            (identifier)))
        (number)))
    (ERROR)))
